# crazyflie-commander

./: .gitignore  Cargo.toml  Readme.md  cargo.toml  flake.nix  next_steps.md
drone-commander/: Cargo.toml  LICENSE  README.md
drone-commander/missions/: body smooth.json  lawn mower.json  mini_smooth.json  nikolaus.json  orbit.json  smooth.json
drone-commander/src/: app.rs  dev_unit.rs  event.rs  home_view.rs  main.rs  messages.rs  mission_select_view.rs  model.rs  pages.rs  program.rs  tui.rs  ui.rs  update.rs  view.rs
drone-commander/src/pages/: free_flight.rs  home.rs  mission_execution.rs  mission_select.rs
drone-commander/src/pages/mission_execution/: mod.rs
drone-commander/src/view/: flight_view.rs  home_view.rs  mission_select_view.rs  view.md  view_common.rs
drone-control/: Cargo.toml  README.md
drone-control/examples/: fly.rs  trajectory.rs
drone-control/src/: control.rs  lib.rs  utils.rs
drone-control/src/control/: command_unit.rs  crazyflie.rs  low_level_engine.rs  patterns.rs  trajectory.rs  vehicle.rs
drone-control/src/control/patterns/: billiard_box.rs  orbit.rs  setpoints.rs  smooth_path.rs
drone-control/src/control/trajectory/: orbit_trajectory.rs  setpoint_trajectory.rs
drone-control/src/utils/: errors.rs  flight_paths.rs  render.rs
ratatea/: Cargo.toml  README.md
ratatea/examples/: timer.rs
ratatea/src/: lib.rs  tui.rs
src/: control.rs  main.rs  utils.rs
src/control/: command_unit.rs  crazyflie.rs  drone_command.rs  low_level_engine.rs  patterns.rs  smooth_path.rs  vehicle.rs
src/control/patterns/: billiard_box.rs  orbit.rs  smooth_path.rs
src/utils/: errors.rs  flight_paths.rs  math.rs  render.rs
