[package]
name = "drone-commander"
version = "0.1.0"
description = "An example generated using the hello-world template"
authors = ["Yannick Gladow <yannick.gladow@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.2"
drone-control = { path = "../drone-control" }
ratatea= { path = "../ratatea" }
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["time", "sync", "fs"] }
futures = "0.3.32"
fastrand = "2.4.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
serde_json = "1.0.150"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
#[profile.release]
#codegen-units = 1
#lto = true
#opt-level = "s"
#strip = true
