[package]
name = "drone-commander"
version = "0.1.0"
description = "A TUI to control the crazyflie quad"
authors = ["Yannick Gladow <yannick.gladow@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.30.2"
drone-control = { path = "../drone-control" }
ratatea = { path = "../ratatea" }
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["time", "sync", "fs"] }
futures = "0.3.32"
fastrand = "2.4.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.45"
