[package]
name = "drone-control"
version = "0.1.0"
edition = "2024"

[dependencies]
crazyflie-lib = "0.8.0"
crazyflie-link = "0.5.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
derive_more = { version = "2.1.1", features = ["full"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"

[dev-dependencies]
proptest = "1.11.0"
test-strategy = "0.4.5"
